fixed textbox length being too small

--- a/app/main/main.css
+++ b/app/main/main.css
@@ -9,7 +9,7 @@
 
 #message-text {
     text-align: center;
-    width: 16em;
+    width: 20em;
 }
 
 .buttons {
